--- a/src/layouts/Header.astro
+++ b/src/layouts/Header.astro
@@ -1,21 +1,24 @@
 ---
-// import { Icon } from 'astro-icon'
+import { Icon } from 'astro-icon'
+import Container from '../components/Container.astro';
+import menuData from '../data/menu.json';
+const { slug } = Astro.params;
 
 ---
 <header id="navHeader" class="header--right white-bg">
-  <!-- <Container className="container-header"> -->
+  <Container className="container-header">
   <div class="header-logo-menu__container">
-    <a class="header-logo__link" href="/fhg/sg/">
+    <a class="header-logo__link" href="/sip/">
       <slot name="logo">
       </slot>
     </a>
     <button id="menuButton" title="Open Main Menu">
       <span id="menuButtonIconHam">
           <div class="baseline-menu"></div>
-        <!-- <Icon name="ic:baseline-menu" width="24px" height="24px" /> -->
+        <Icon name="ic:baseline-menu" width="24px" height="24px" />
       </span>
       <span id="menuButtonIconClose" hidden>
-        <!-- <Icon name="ic:baseline-close" width="24px" height="24px" /> -->
+        <Icon name="ic:baseline-close" width="24px" height="24px" />
         <div class="baseline-close"></div>
       </span>
     </button>
@@ -25,7 +28,31 @@
     <slot name="nav">
       <nav>
         <ul>
-         
+          {menuData.map(menu => (
+            <li class={`${menu.submenu ? 'has-submenu' : '' } ${menu.slug == slug ? 'active' : ' ' }`} >
+              <a href={`${menu.url}`}>{menu.name}</a>
+              {menu.submenu && (
+                <ul class="sub-menu-1 sub-menu">
+                  {menu.submenu.map(submenuItem => (
+                    <li class={`${submenuItem.submenu ? 'has-submenu' : '' } ${submenuItem.slug == slug ? 'active' : '' }`} >
+                      <a href={`${submenuItem.url}`} set:html={submenuItem.name}>{submenuItem.name}</a>
+                      {submenuItem.submenu && (
+                        <ul class="sub-menu-2 sub-menu">
+                          {submenuItem.submenu.map(subSubmenuItem => (
+                            <li class={` ${subSubmenuItem.slug == slug ? 'active' : '' }`}>
+                              <a href={`${subSubmenuItem.url}`}>{subSubmenuItem.name}</a>
+                            </li>
+                          ))}
+                            <li class="back"><a href="#">Back</a></li>
+                        </ul>
+                      )}
+                    </li>                    
+                  ))}
+                  <li class="back"><a href="#">Back</a></li>
+                </ul>
+              )}
+            </li>
+          ))}
         </ul>
       </nav>    
     </slot>
@@ -34,5 +61,5 @@
     <slot name="action-item">
     </slot>
   </div>
-<!-- </Container> -->
+</Container>
 </header>
