--- a/src/styles/sip/header.less
+++ b/src/styles/sip/header.less
@@ -151,7 +151,11 @@ body {
             a {
               display: block;
               width: 100%;
-              padding: 10px 10px;
+              padding: 15px 10px;
+              border-bottom: 1px solid #ccc;
+              &:hover {
+                background: #ccc;
+              }
             }
             &.has-submenu {
               position: relative;
@@ -168,7 +172,7 @@ body {
                 background: #fff;
                 z-index: 107;
                 top: 0;
-                
+                box-shadow: none !important;
                 &.open-sub {
                   left: 0% !important;
                   opacity: 1 !important;
