--- a/src/layouts/Header.astro
+++ b/src/layouts/Header.astro
@@ -34,8 +34,8 @@ const { slug } = Astro.params;
               {menu.submenu && (
                 <ul class="sub-menu-1 sub-menu">
                   {menu.submenu.map(submenuItem => (
-                    <li class={`${submenuItem.submenu ? 'has-submenu' : '' } ${submenuItem.slug == slug ? 'active' : '' }`} >
-                      <a href={`${submenuItem.url}`} set:html={submenuItem.name}>{submenuItem.name}</a>                      
+                    <li class={`${submenuItem.slug == slug ? 'active' : '' }`} >
+                      <a href={`${submenuItem.url}`} >{submenuItem.name}</a>                      
                     </li>                    
                   ))}
                   <li class="back"><a href="#">Back</a></li>
