--- a/src/layouts/Header.astro
+++ b/src/layouts/Header.astro
@@ -30,12 +30,12 @@ const { slug } = Astro.params;
         <ul>
           {menuData.map(menu => (
             <li class={`${menu.submenu ? 'has-submenu' : '' } ${menu.slug == slug ? 'active' : ' ' }`} >
-              <a href={`${menu.url}`}>{menu.name}</a>
+              <a href={`${menu.url}`} set:html={menu.name}> </a>
               {menu.submenu && (
                 <ul class="sub-menu-1 sub-menu">
                   {menu.submenu.map(submenuItem => (
                     <li class={`${submenuItem.slug == slug ? 'active' : '' }`} >
-                      <a href={`${submenuItem.url}`} >{submenuItem.name}</a>                      
+                      <a href={`${submenuItem.url}`} set:html={submenuItem.name}></a>                      
                     </li>                    
                   ))}
                   <li class="back"><a href="#">Back</a></li>
