--- a/src/styles/sip/index.less
+++ b/src/styles/sip/index.less
@@ -1,7 +1,9 @@
+
 @import url('../reset.less');
 @import url('../theme.less');
 @import url('../transition.less');
 @import url('../typography.less');
+@import url('../fontawesome-all.min.css');
 @import url('./global.less');
 @import url('./header.less');
 // @import url('./forms.less');
