--- a/src/styles/sip/global.less
+++ b/src/styles/sip/global.less
@@ -3,6 +3,7 @@ body {
 	height: 100%;
 	scroll-behavior: smooth;
 	scroll-padding: 90px;
+	overflow: auto;
 }
 
 body {
@@ -88,12 +89,18 @@ section {
 	}
 }
 .link-card-grid {
-	display: grid;
-	grid-template-columns: repeat(2,1fr);
-    gap: 1rem;
+	// display: grid;
+	// grid-template-columns: repeat(2,1fr);
+    gap: 10px;
 	list-style: none;
 	margin: 0;
     padding-inline-start: 0;
+	display: flex;
+	flex-wrap: wrap;
+	flex-direction: row;
+	li {
+		width: 49%;
+	}
 }
 .btn {
 	padding: 10px 15px;
@@ -109,11 +116,11 @@ ul {
 }
 
 @media (max-width: 991px) {
-	.link-card-grid {
-		display: grid;
-		grid-template-columns: repeat(2,1fr);
-		gap: 1rem;
-	}
+	// .link-card-grid {
+	// 	display: grid;
+	// 	grid-template-columns: repeat(2,1fr);
+	// 	gap: 1rem;
+	// }
 }
 
 @media (max-width: 768px) {
@@ -132,7 +139,8 @@ ul {
 }
 @media (max-width: 750px) {
 	.link-card-grid {
-		grid-template-columns: repeat(1,1fr);
-		margin: 0 10px;
+		li {
+			width: 100%;
+		}
 	}
 }
