--- a/src/styles/sip/global.less
+++ b/src/styles/sip/global.less
@@ -52,6 +52,7 @@ h1, h2, h3, h4, h5 ,h6, p, div, span {
 }
 section {
 	padding: 0 10px;
+	margin: 20px 0;
 }
 .align-center {
 	text-align: center;
@@ -62,7 +63,7 @@ section {
 
 .list {
 	background: #cccccc47;
-    padding: 20px;
+    padding: 10px 10px;
 	width: 100%;
 	border-radius: 10px;
 	box-shadow: 3px 3px 3px #cccccc7d;
@@ -77,6 +78,7 @@ section {
 		width: 100%;
     	gap: 10px;
 	}
+
 }
 .content-container {
 	display: flex;
@@ -89,8 +91,7 @@ section {
 	}
 }
 .link-card-grid {
-	// display: grid;
-	// grid-template-columns: repeat(2,1fr);
+
     gap: 10px;
 	list-style: none;
 	margin: 0;
@@ -100,12 +101,45 @@ section {
 	flex-direction: row;
 	li {
 		width: 49%;
+		.info-text {
+			a {
+				display: block;
+			}
+			h3 {
+				font-size: var(--font-size-base);
+			}
+			.date {
+				font-size: var(--font-size-xsm);
+			}
+			.description {
+				font-size: var(--font-size-sm);
+				overflow: hidden;
+    			white-space: wrap;
+			}
+		}
+		.info-btn {
+			a {
+				font-size: var(--font-size-sm);
+			}
+		}
 	}
 }
 .btn {
-	padding: 10px 15px;
-    border-radius: 20px;
 	font-weight: 500;
+    display: inline-flex;
+    align-items: center;
+    gap: 5px;
+    border: 1px solid #001;
+    padding: 5px 10px;
+    border-radius: 5px;
+    transition: all .1s ease-in;
+	font-size: var(--font-size-sm);
+	margin: 10px 0;
+	&:hover {
+		transform: translate(0,-3px);
+   	 	box-shadow: 7px 7px 1px #ccc;
+		font-weight: 600;
+	}
 	&.btn-yellow {
 		background-color: #F7D842 !important;
 		color: #000;
