--- a/src/styles/typography.less
+++ b/src/styles/typography.less
@@ -27,6 +27,7 @@
     url('/fhg/assets/fonts/Effra-W06-Light.ttf') format('ttf'), /* Chrome 26+, Opera 23+, Firefox 39+ */
 }
 :root {
+  --font-size-xsm: clamp(8px, 8vw, 12px);
   --font-size-sm: clamp(14.4px, 0.07vw + 14.13px, 15px);
   --font-size-base: clamp(18px, 0.23vw + 17.09px, 20px);
   --font-size-md: clamp(22.5px, 0.47vw + 20.61px, 26.66px);
