--- a/src/layouts/BaseHead.astro
+++ b/src/layouts/BaseHead.astro
@@ -1,4 +1,5 @@
 ---
+import { ViewTransitions } from 'astro:transitions';
 interface Props {
 	title: string;
 	description: string;
@@ -39,10 +40,10 @@ const { title, description, image = '/favicon.ico' } = Astro.props;
 <meta property="twitter:description" content={description} />
 <meta property="twitter:image" content={new URL(image, Astro.url)} />
 
-
+<ViewTransitions></ViewTransitions>
 
 <script type="module" >
-	//document.addEventListener('astro:page-load', () => {
+	document.addEventListener('astro:page-load', () => {
 	   	const obeserver = new IntersectionObserver((entries) => {
 		entries.forEach((entry) => {
 		  	if(entry.isIntersecting) {
@@ -79,41 +80,45 @@ const { title, description, image = '/favicon.ico' } = Astro.props;
 				navHeader.toggleAttribute('mobile-menu-open');
 			}
 		}
-	//}, );  
+	}, );  
 </script>
 <!-- head -->
 
 <script is:inline src="https://code.jquery.com/jquery-3.7.0.min.js"></script>
 <script is:inline >
-	$(document).ready(function() {
-		size = $(document).width();
-		$('#navHeader nav ul li.has-submenu > a').on('click', function(e) {
-			e.preventDefault();
-			if(size <= 991){
-				$(this).next('ul').addClass('open-sub');
-			}
+	document.addEventListener('astro:page-load', () => {
+		$(document).ready(function() {
+			size = $(document).width();
+			$('#navHeader nav ul li.has-submenu > a').on('click', function(e) {
+				e.preventDefault();
+				if(size <= 991){
+					$(this).next('ul').addClass('open-sub');
+				}
+			});
+			$('#navHeader nav ul li.has-submenu .back').on('click', function(e) {
+				e.preventDefault();
+				$(this).parent('ul').removeClass('open-sub');
+			});
+			windowSize();
 		});
-		$('#navHeader nav ul li.has-submenu .back').on('click', function(e) {
-			e.preventDefault();
-			$(this).parent('ul').removeClass('open-sub');
+		$(window).resize(function(){
+			windowSize();
 		});
-		windowSize();
-	});
-	$(window).resize(function(){
-        windowSize();
-    });
-	function windowSize() {        
-        var headerheight = $('#navHeader').height();
-        $('.main').css({'margin-top': headerheight + 'px' });
-  	};
+		function windowSize() {        
+			var headerheight = $('#navHeader').height();
+			$('.main').css({'margin-top': headerheight + 'px' });
+		};
+		}, );
 </script>
 
-<!-- <script is:inline src="https://www.googletagmanager.com/gtag/js?id=G-8GWLGV29V7"></script>
+<script is:inline src="https://www.googletagmanager.com/gtag/js?id=G-8GWLGV29V7"></script>
 <script is:inline >
-  window.dataLayer = window.dataLayer || [];
-  function gtag() {
-    dataLayer.push(arguments);
-  }
-  gtag("js", new Date());
-  gtag("config", "G-8GWLGV29V7");
-</script> -->
+	document.addEventListener('astro:page-load', () => {
+		window.dataLayer = window.dataLayer || [];
+		function gtag() {
+			dataLayer.push(arguments);
+		}
+		gtag("js", new Date());
+		gtag("config", "G-8GWLGV29V7");
+	}, );
+</script>
