--- a/src/pages/announcement.astro
+++ b/src/pages/announcement.astro
@@ -46,7 +46,7 @@ import employeehub from '../data/employeehub.json';
                             </li>
                         ))}      
                     </ul>
-                    <a href="./employeehub" class="btn btn-blue">View All</a>
+                    <a href="../employeehub" class="btn btn-blue">View All</a>
                 </section>
 			</div>
 			
