--- a/src/styles/header.less
+++ b/src/styles/header.less
@@ -139,6 +139,7 @@ body {
         display: block;
         align-items: start;
         flex-direction: column;
+        padding: 0 0;
         ul {
           // align-items: start;
           flex-direction: column;
