--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,5 +1,5 @@
 ---
-import '../styles/sip/index.less';
+import '../styles/index.less';
 
 import BaseHead from './BaseHead.astro';
 import Header from './Header.astro';
