--- a/src/styles/typography.less
+++ b/src/styles/typography.less
@@ -5,7 +5,7 @@
   font-weight: 600;
   font-display: swap;
   src: local(''),
-      url('/fhg/assets/fonts/Effra-Bold.ttf') format('ttf'), /* Chrome 26+, Opera 23+, Firefox 39+ */
+      url('/sip/assets/fonts/Effra-Bold.ttf') format('ttf'), /* Chrome 26+, Opera 23+, Firefox 39+ */
 }
 /* roboto-serif-700 - latin */
 @font-face {
@@ -14,7 +14,7 @@
   font-weight: 400;
   font-display: swap;
   src: local(''),
-    url('/fhg/assets/fonts/Effra.ttf') format('ttf'), /* Chrome 26+, Opera 23+, Firefox 39+ */
+    url('/sip/assets/fonts/Effra.ttf') format('ttf'), /* Chrome 26+, Opera 23+, Firefox 39+ */
 }
 
 /* lato-300 - latin */
@@ -24,7 +24,7 @@
   font-weight: 300;
   font-display: swap;
   src: local(''),  
-    url('/fhg/assets/fonts/Effra-W06-Light.ttf') format('ttf'), /* Chrome 26+, Opera 23+, Firefox 39+ */
+    url('/sip/assets/fonts/Effra-W06-Light.ttf') format('ttf'), /* Chrome 26+, Opera 23+, Firefox 39+ */
 }
 :root {
   --font-size-xsm: clamp(8px, 8vw, 12px);
@@ -76,16 +76,6 @@ h3 {
 
 h6 {
 	font-size: var(--font-size-sm);
-}
-
-h1,
-h2,
-h3,
-h4,
-h5,
-h6,
-p {
-	margin: 0 0 .3rem 0;
 }
 
 blockquote {
