--- a/src/styles/reset.less
+++ b/src/styles/reset.less
@@ -62,7 +62,11 @@ textarea,
 select {
 	font: inherit;
 }
-
+ul {
+	list-style: none;
+    margin: 0;
+    padding-inline-start: 0;
+}
 /* Remove all animations, transitions and smooth scroll for people that prefer not to see them */
 @media (prefers-reduced-motion: reduce) {
 	html:focus-within {
