--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -88,7 +88,8 @@ import news from '../data/news.json';
                                         <p set:html={news.description}></p>
                                     </li>
                                 ))}
-                            </ul>  
+                            </ul>
+                            <a href="./newsletter" class="btn btn-blue">View All</a>  
                         </div>
                     </section>
                 </aside>
